--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 		<script src="node_modules/three/three.min.js"></script>
 
 		<script src="libs/hilbert3D.js"></script>
-
 		<script src="libs/Detector.js"></script>
 		<script src="libs/stats.min.js"></script>
 		<script src="libs/OBJLoader.js"></script>
+		<script src="threehelper.js"></script>
 		<script src="cord.js"></script>
 		<script src="physic.js"></script>
 		<script src="controleShip.js"></script>
@@ -56,7 +56,6 @@
 		<script src="generateStarMap.js"></script>
 
 		<script>
-
 			if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 
 			var mouse = {
@@ -138,7 +137,7 @@
 
 				//cam
 				camera = new THREE.PerspectiveCamera( 33, window.innerWidth / window.innerHeight, 1, 10000 );
-				camera.position.z = 2000;
+				camera.position.z = 7000;
 
 				// key events
 				var onKeyDown = function ( event ) {
