use unminified three.js

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</style>
 	</head>
 	<body>
-		<script src="node_modules/three/three.min.js"></script>
+		<script src="node_modules/three/three.js"></script>
 		
 		<script src="libs/Detector.js"></script>
 		
