--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
+			@font-face {
+			    font-family: 'munroregular';
+			    src: url('fonts/munro-webfont.eot');
+			    src: url('fonts/munro-webfont.eot?#iefix') format('embedded-opentype'),
+			         url('fonts/munro-webfont.woff2') format('woff2'),
+			         url('fonts/munro-webfont.woff') format('woff'),
+			         url('fonts/munro-webfont.ttf') format('truetype'),
+			         url('fonts/munro-webfont.svg#munroregular') format('svg');
+			    font-weight: normal;
+			    font-style: normal;
+
+			}
 			body {
 				background-color: #000022;
 				margin: 0px;
